# cologra

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cologra.sh  run.slurm  vcpkg.json
python/: Makefile  pyproject.toml
python/src/: main.py  targets.py
python/src/benchmark/: benchmark_data.py  biggest_advantage.py  definitions.py  find_faulty.py  main.py  migrate_json.py  plot_compression_efficiency.py  plot_permutations.py  plot_time_compare.py
python/src/suitesparse/: main.py  targets.py
python/src/suitesparse/util/: definitions.py  download.py  ss_index.py  subsets.py
python/src/util/: definitions.py  download.py  ss_index.py  subsets.py
shared/: .gitignore  targets.json  targets.schema.json
src/: CMakeLists.txt  cli.cpp  coloring.cpp  main.cpp
src/benchmark/: Benchmark.cpp  Benchmark.hpp  BenchmarkResult.cpp  BenchmarkResult.hpp  CaptureLog.cpp  CaptureLog.hpp  InputLoader.cpp  InputLoader.hpp  Paths.cpp  Paths.hpp  ProgressBarIterator.hpp  SuiteSparseMatrix.cpp  SuiteSparseMatrix.hpp  entry.cpp  entry.hpp  run.cpp
src/cologra/: ColoringAlgorithm.cpp  ColoringAlgorithm.hpp  Heuristic.cpp  Heuristic.hpp  coloring.cpp  coloring.hpp  definitions.hpp  display.cpp  display.hpp  heuristic.hpp  matrixIO.hpp  matrixToGraph.cpp  matrixToGraph.hpp
src/cologra/algorithms/: BasicParallel.cpp  BasicParallel.hpp  BasicSequential.cpp  BasicSequential.hpp  BoostSequential.cpp  BoostSequential.hpp  OrderedSequential.cpp  OrderedSequential.hpp  TieBreakSequential.cpp  TieBreakSequential.hpp
src/cologra/algorithms/RandomPermutationQueue/: RandomPermutationQueue.cpp  RandomPermutationQueue.hpp  ResultOrException.cpp  ResultOrException.hpp
src/cologra/util/: coloring.cpp  coloring.hpp  connectedComponents.hpp  connected_components.cpp  connected_components.hpp  createAlgorithm.cpp  createAlgorithm.hpp  degeneracy.cpp  degeneracy.hpp  display.cpp  display.hpp  inttest.hpp  matrixCompression.cpp  matrixCompression.hpp  matrixIO.cpp  matrixIO.hpp  matrixToGraph.cpp  matrixToGraph.hpp
suitesparse/: pyproject.toml
suitesparse/src/: definitions.py  download.py  main.py  ss_index.py  subsets.py  targets.py
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
